Deploy preview for PR 2 🛫

--- a/pr-preview/pr-2/index.html
+++ b/pr-preview/pr-2/index.html
@@ -13,7 +13,7 @@
 <body>
     <h1>Available Plugins</h1>
     <ul>
-    <li><a href="skip-button-plugin/index.html">skip-button-plugin</a></li>
+    <li><a href="skip-button/index.html">skip-button</a></li>
     </ul>
 </body>
 </html>
