feat: add playlist management plugin to pillarbox player
Introduces a pillarbox playlist plugin. This plugin supports playlist loading, dynamic
modifications, auto-advancement, and repeat functionalities.

***Key Features:***

- **Initialization Options**: Configurable through an options object that can include an initial
  playlist, and settings for repeat and auto-advance behaviors.
- **Dynamic Playlist Management**: Methods to load, push, splice, and shuffle playlist items
  dynamically.
- **Playback Control**: Functions to navigate through the playlist such as next, previous, and
  select specific items.
- **State Properties**: Properties like `repeat` and `autoadvance` which can be toggled
  post-initialization to alter playback behavior.

***Example***

```javascript
import Pillarbox from '@srgssr/pillarbox-web';
import '@srgssr/pillarbox-playlist';

const player = new Pillarbox('my-player', {
  plugins: { pillarboxPlaylist: { autoadvance: true, repeat: true } }
});

const playlist = [
  { sources: [{ src: 'video1.mp4', type: 'video/mp4' }], poster: 'poster1.jpg' },
  { sources: [{ src: 'video2.mp4', type: 'video/mp4' }], poster: 'poster2.jpg' }
];

player.pillarboxPlaylist().load(playlist);
```

--- a/packages/skip-button/index.html
+++ b/packages/skip-button/index.html
@@ -46,7 +46,8 @@
   // Load the video source for the player
   player.src({
     src: urn,
-    type: 'srgssr/urn'
+    type: 'srgssr/urn',
+    disableTrackers: true
   });
 
   // Expose player for debugging
