--- a/packages/pillarbox-playlist/index.html
+++ b/packages/pillarbox-playlist/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8"/>
   <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>{{titleCase name}} Demo</title>
+  <title>Pillarbox-Playlist Demo</title>
   <style>
     html,
     body {
@@ -23,35 +23,30 @@
 <script type="module">
   import '@srgssr/pillarbox-web/dist/pillarbox.min.css';
   import pillarbox from '@srgssr/pillarbox-web';
-  import './src/{{kebabCase name}}.js';
+  import './src/pillarbox-playlist.js';
 
   // Handle URL parameters
   const searchParams = new URLSearchParams(location.search);
   const debug = searchParams.has('debug');
   const ilHost = searchParams.get('ilHost') || undefined;
   const language = searchParams.get('language');
-  const urn = searchParams.get('urn') || 'urn:rts:video:14683290';
 
-  // Create a pillarbox player instance with the {{properCase name}} enabled
+  // Create a pillarbox player instance with the PillarboxPlaylist enabled
   window.player = pillarbox('player', {
     debug,
     language,
-    srgOptions: {
-      dataProviderHost: ilHost
-    },
-{{#ifEq type 'Plugin'}}
-    plugins: { {{camelCase name}}: true }
-{{else}}
-    {{properCase name}}: true
-{{/ifEq}}
+    autoplay: true,
+    srgOptions: { dataProviderHost: ilHost },
+    plugins: { pillarboxPlaylist: { autoadvance: true, repeat: true } }
   });
 
   // Load the video source for the player
-  player.src({
-    src: urn,
-    type: 'srgssr/urn',
-    disableTrackers: true
-  });
+  player.pillarboxPlaylist().load([
+    { sources: [{ src: 'urn:rts:video:14827306', type: 'srgssr/urn' }] },
+    { sources: [{ src: 'urn:rts:video:8393241', type: 'srgssr/urn' }] },
+    { sources: [{ src: 'urn:rts:video:13444390', type: 'srgssr/urn' }] },
+    { sources: [{ src: 'urn:rsi:video:15916771', type: 'srgssr/urn' }] }
+  ]);
 
   // Expose player for debugging
   window.player = player;
