feat(playlist-plugin): introduce repeat one mode
- Introduced a new "repeat one" mode to the playlist plugin.
- Modified the UI to include a toggle button that cycles through three modes: no repeat, repeat all,
  and repeat one.

BREAKING CHANGE:

- Changed the API to toggle the repeat mode and the initialization options.
- The repeat mode is no longer a boolean. It is now a number representing each mode (0: no repeat,
  1: repeat all, 2: repeat one).

--- a/packages/pillarbox-playlist/index.html
+++ b/packages/pillarbox-playlist/index.html
@@ -26,6 +26,7 @@
   import { default as pillarbox, SrgSsr} from '@srgssr/pillarbox-web';
   import './src/pillarbox-playlist.js';
   import './src/pillarbox-playlist-ui.js';
+  import { RepeatMode } from './src/pillarbox-playlist.js';
 
   // Handle URL parameters
   const searchParams = new URLSearchParams(location.search);
@@ -40,7 +41,7 @@
     autoplay: true,
     srgOptions: { dataProviderHost: ilHost },
     plugins: {
-      pillarboxPlaylist: { repeat: true },
+      pillarboxPlaylist: { autoadvance: true, repeat: RepeatMode.REPEAT_ALL },
       pillarboxPlaylistUI: true
     }
   });
