feat(playlist-plugin): enhance configuration options for playlist modal
Resolves #16 by introducing new configuration options that allow integrators to specify which
buttons should appear in the playlist modal. Also exposes the modal options.

- Added `pillarboxPlaylistMenuDialog` option to configure the modal dialog component.
- Exposed `pillarboxPlaylistMenuDialog.pauseOnOpen` option to control whetherWQ the player
  pauses when the modal is opened.
- Added `pillarboxPlaylistMenuDialog.pillarboxPlaylistControls` option to define the order,
  addition, or remova of the control buttons.

***Other Changes***

- Split the `controls` into individual components that can be registered separately.
- Added a test for the playlist plugin UI registration.
- Added suffix `pillarboxPlaylist` to all components to avoid naming clashes.

--- a/packages/pillarbox-playlist/index.html
+++ b/packages/pillarbox-playlist/index.html
@@ -40,8 +40,8 @@
     autoplay: true,
     srgOptions: { dataProviderHost: ilHost },
     plugins: {
-      pillarboxPlaylist: { autoadvance: true, repeat: true },
-      pillarboxPlaylistUI: { insertChildBefore: 'fullscreenToggle' }
+      pillarboxPlaylist: { repeat: true },
+      pillarboxPlaylistUI: true
     }
   });
 
