--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
   <li><a href="packages/pillarbox-playlist/index.html">pillarbox-playlist</a></li>
   <li><a href="packages/skip-button/index.html">skip-button</a></li>
   <li><a href="packages/pillarbox-debug-panel/index.html">pillarbox-debug-panel</a></li>
+  <li><a href="packages/user-preferences/index.html">user-preferences</a></li>
 </ul>
 </body>
 </html>
