chore: use camel case for examples and documentation
Changes every component's initialization in examples and documentation from proper case
to the preferred camel case. This change also applies to the templates of the `create`
cli.

Added mising VERSION static property tests for all components.

--- a/packages/skip-button/index.html
+++ b/packages/skip-button/index.html
@@ -40,7 +40,7 @@
     srgOptions: {
       dataProviderHost: ilHost
     },
-    SkipButton: true
+    skipButton: true
   });
 
   // Load the video source for the player
