--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@
   <li><a href="packages/pillarbox-debug-panel/index.html">pillarbox-debug-panel</a></li>
   <li><a href="packages/user-preferences/index.html">user-preferences</a></li>
   <li><a href="packages/big-replay-button/index.html">big-replay-button</a></li>
+  <li><a href="packages/brand-button/index.html">brand-button</a></li>
 </ul>
 </body>
 </html>
