feat: add a sprite-based thumbnail preview component
Adds a new plugin that displays frame-accurate thumbnails on the player’s
progress bar using a configurable sprite sheet.

The plugin tracks mouse movement over the progressControl, calculates the
correct thumbnail frame from the sprite grid based on timing intervals, and
positions the preview element accordingly.

- Supports responsive scaling via configurable breakpoint coefficients
- Automatically hides the preview when the player height is below a
  configurable threshold.

Integrates directly with Video.js components, the component is initialized
through a plugin for convinience.

Initialization requires the presence of the progressControl component.

--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
   <li><a href="packages/user-preferences/index.html">user-preferences</a></li>
   <li><a href="packages/big-replay-button/index.html">big-replay-button</a></li>
   <li><a href="packages/brand-button/index.html">brand-button</a></li>
+  <li><a href="packages/thumbnail-preview/index.html">thumbnail-preview</a></li>
 </ul>
 </body>
 </html>
