Deploy preview for PR 60 🛫

--- a/pr-preview/pr-60/index.html
+++ b/pr-preview/pr-60/index.html
@@ -151,6 +151,17 @@
       </div>
     </a>
   </li>
+  <li>
+    <a href="packages/thumbnail-preview/index.html">
+      <div class="package-container">
+        <img src="./assets/thumbnail-preview-BlYnvFK_.png" width="150">
+        <div>
+          <h4>thumbnail-preview</h4>
+          <p>Displays timestamp-aligned thumbnails during timeline hover using a sprite sheet and optional scaling configuration.</p>
+        </div>
+      </div>
+    </a>
+  </li>
 </ul>
 </body>
 </html>
