feat: add a suite of card components
Add a new suite of components for displaying media metadata. The suite includes
a base `Card` component, a `CardLink` for navigation, and a `CardButton`
for actions.

The components provide a consistent and flexible way to present information like
`title`, `duration`, and a preview `image`. They are designed to serve as
foundational building blocks for more complex UI patterns, such as chapter
displays and recommendation grids.

- add `Card`, `CardLink`, and `CardButton` components
  - configurable via player options for metadata and event handlers
- add `index.js` so that each component can be imported independently
- add JSDoc
- add unit tests
- modify default vite config

--- a/index.html
+++ b/index.html
@@ -162,6 +162,17 @@
       </div>
     </a>
   </li>
+  <li>
+    <a href="packages/card/index.html">
+      <div class="package-container">
+        <img src="assets/card.png" width="150">
+        <div>
+          <h4>card</h4>
+          <p>Displays a card component containing a title, duration, and a preview image.</p>
+        </div>
+      </div>
+    </a>
+  </li>
 </ul>
 </body>
 </html>
