Deploy preview for PR 63 🛫

--- a/pr-preview/pr-63/index.html
+++ b/pr-preview/pr-63/index.html
@@ -162,6 +162,28 @@
       </div>
     </a>
   </li>
+  <li>
+    <a href="packages/card/index.html">
+      <div class="package-container">
+        <img src="./assets/card-D1xsdaQY.png" width="150">
+        <div>
+          <h4>card</h4>
+          <p>Displays a card component containing a title, duration, and a preview image.</p>
+        </div>
+      </div>
+    </a>
+  </li>
+  <li>
+    <a href="packages/chapters-bar/index.html">
+      <div class="package-container">
+        <img src="./assets/chapters-bar-4saNe_qh.png" width="150">
+        <div>
+          <h4>chapters bar</h4>
+          <p>Displays a scrollable list of video chapters, allowing users to easily navigate through the content.</p>
+        </div>
+      </div>
+    </a>
+  </li>
 </ul>
 </body>
 </html>
