--- a/index.html
+++ b/index.html
@@ -3,187 +3,49 @@
 <head>
   <title>Package Showcase</title>
   <link rel="stylesheet" href="https://unpkg.com/open-props">
-  <style>
-    body {
-      font-family: var(--font-sans);
-      background-color: var(--gray-9); /* Dark background for body */
-      color: var(--gray-1); /* Light text color */
-      margin: 0 auto;
-      padding: var(--size-3);
-      max-width: var(--size-md);
-    }
-
-    header {
-      color: var(--gray-3); /* Lightest text color */
-      padding-bottom: var(--size-2);
-      text-align: center;
-      font-size: var(--font-size-1); /* Larger text for the header */
-      margin: var(--size-2) auto;
-    }
-
-    ul {
-      list-style-type: none;
-      padding: 0;
-      margin: var(--size-2) auto;
-      background-color: var(--gray-8); /* Slightly lighter dark background for contrast */
-      box-shadow: var(--shadow-3); /* Prominent shadow for 3D effect */
-      border-radius: var(--radius-2);
-    }
-
-    li {
-      border-bottom: 1px solid var(--gray-7);
-      margin: 0;
-      transition: background-color 0.3s;
-    }
-
-    li:first-child {
-      border-radius: var(--radius-2) var(--radius-2) 0 0;
-    }
-
-    li:last-child {
-      border-radius: 0 0 var(--radius-2) var(--radius-2);
-    }
-
-    li:only-child {
-      border-radius: var(--radius-2);
-    }
-
-    li:hover {
-      background-color: var(--gray-6); /* Slightly lighter on hover for interactive feel */
-    }
-
-    a {
-      display: block;
-      padding: var(--size-3) var(--size-4);
-      text-decoration: none;
-      color: var(--gray-4); /* Subtle blue color for links */
-      transition: color 0.3s;
-      font-size: var(--font-size-2); /* Standard text size for links */
-    }
-
-    a h4 {
-      margin: 0;
-    }
-
-    a p {
-      font-size: var(--font-size-1);
-    }
-
-    a:hover {
-      color: var(--gray-12); /* Slightly brighter blue on hover */
-    }
-
-    .package-container {
-      display: flex;
-      align-items: center;
-      gap: var(--size-4);
-    }
-  </style>
+  <link rel="stylesheet" href="./index.scss"/>
 </head>
 <body>
 <header>
   <h1>Pillarbox Extensions</h1>
 </header>
-<ul>
-  <li>
-    <a href="packages/pillarbox-playlist/index.html">
-      <div class="package-container">
-        <img src="assets/pillarbox-playlist.png" width="150">
-        <div>
-          <h4>pillarbox-playlist</h4>
-          <p>Displays a list of available media items and handles playlist navigation and playback control within the Pillarbox player.</p>
-        </div>
+<ul id="content"></ul>
+<script type="module">
+  import extensions from './assets/extensions.json';
+  import githubIcon from './assets/github-logo.svg?raw';
+
+  const listFragment = document.createDocumentFragment();
+
+  extensions.forEach(({ name, description }) => {
+    const li = document.createElement('li');
+
+    li.innerHTML = `
+    <a class="info-container"
+       title="Launch Demo"
+       href="packages/${name}/index.html"
+       target="_blank">
+      <img src="img/${name}.png" width="150">
+      <div>
+        <h4>${name}</h4>
+        <p>${description}</p>
       </div>
     </a>
-  </li>
-  <li>
-    <a href="packages/skip-button/index.html">
-      <div class="package-container">
-        <img src="assets/skip-button.png" width="150">
-        <div>
-          <h4>skip-button</h4>
-          <p>Adds a control to skip predefined video segments based on custom intervals triggered by the srgssr/interval event.</p>
-        </div>
-      </div>
-    </a>
-  </li>
-  <li>
-    <a href="packages/pillarbox-debug-panel/index.html">
-      <div class="package-container">
-        <img src="assets/pillarbox-debug-panel.png" width="150">
-        <div>
-          <h4>pillarbox-debug-panel</h4>
-          <p>Renders an overlay with internal debug data, including playback state, timing metrics, and live player information.</p>
-        </div>
-      </div>
-    </a>
-  </li>
-  <li>
-    <a href="packages/user-preferences/index.html">
-      <div class="package-container">
-        <img src="assets/user-preferences.png" width="150">
-        <div>
-          <h4>user-preferences</h4>
-          <p>Stores and retrieves user settings like volume, playback rate, text track, and audio track using localStorage.</p>
-        </div>
-      </div>
-    </a>
-  </li>
-  <li>
-    <a href="packages/big-replay-button/index.html">
-      <div class="package-container">
-        <img src="assets/big-replay-button.png" width="150">
-        <div>
-          <h4>big-replay-button</h4>
-          <p>Displays a prominent replay button when playback ends, reusing the standard play button’s appearance and behavior.</p>
-        </div>
-      </div>
-    </a>
-  </li>
-  <li>
-    <a href="packages/brand-button/index.html">
-      <div class="package-container">
-        <img src="assets/brand-button.png" width="150">
-        <div>
-          <h4>brand-button</h4>
-          <p>Adds a configurable button to the control bar with a custom SVG icon and URL for linking to external destinations.</p>
-        </div>
-      </div>
-    </a>
-  </li>
-  <li>
-    <a href="packages/thumbnail-preview/index.html">
-      <div class="package-container">
-        <img src="assets/thumbnail-preview.png" width="150">
-        <div>
-          <h4>thumbnail-preview</h4>
-          <p>Displays timestamp-aligned thumbnails during timeline hover using a sprite sheet and optional scaling configuration.</p>
-        </div>
-      </div>
-    </a>
-  </li>
-  <li>
-    <a href="packages/card/index.html">
-      <div class="package-container">
-        <img src="assets/card.png" width="150">
-        <div>
-          <h4>card</h4>
-          <p>Displays a card component containing a title, duration, and a preview image.</p>
-        </div>
-      </div>
-    </a>
-  </li>
-  <li>
-    <a href="packages/chapters-bar/index.html">
-      <div class="package-container">
-        <img src="assets/chapters-bar.png" width="150">
-        <div>
-          <h4>chapters bar</h4>
-          <p>Displays a scrollable list of video chapters, allowing users to easily navigate through the content.</p>
-        </div>
-      </div>
-    </a>
-  </li>
-</ul>
+    <div class="link-container">
+      <a href="https://github.com/SRGSSR/pillarbox-web-suite/tree/main/packages/${name}#readme"
+         class="github-link"
+         title="See in Github"
+         target="_blank">
+        ${githubIcon}
+      </a>
+    </div>
+  `;
+
+    listFragment.append(li);
+  });
+
+  document.getElementById('content').append(listFragment);
+
+
+</script>
 </body>
 </html>
